--- a/styles.css
+++ b/styles.css
@@ -174,13 +174,41 @@ a {
 }
 
 .offers {
-    display: grid;
+    display: none;
     row-gap: 2vw;
     max-width: 80%;
     justify-content: center;
     margin: auto;
     margin-top: 4vw;
     margin-bottom: 4vw;
+}
+.offers-2 {
+    display: none;
+    row-gap: 2vw;
+    max-width: 80%;
+    justify-content: center;
+    margin: auto;
+    margin-top: 4vw;
+    margin-bottom: 4vw;
+}
+.offers-3 {
+    display: none;
+    row-gap: 2vw;
+    max-width: 80%;
+    justify-content: center;
+    margin: auto;
+    margin-top: 4vw;
+    margin-bottom: 4vw;
+}
+
+.offers.active {
+    display: grid;
+}
+.offers-2.active {
+    display: grid;
+}
+.offers-3.active {
+    display: grid;
 }
 
 .offer {
@@ -200,8 +228,12 @@ a {
 .offers :hover {
     border-color: rgba(254, 171, 65, 1);
 }
-
-
+.offers-2 :hover {
+    border-color: rgba(254, 171, 65, 1);
+}
+.offers-3 :hover {
+    border-color: rgba(254, 171, 65, 1);
+}
 
 .offer__element-image {
     width: 100%;
@@ -213,7 +245,7 @@ a {
 .offer__element-best {
     position: absolute;
     top: 2.4vw;
-    background: #0057FF;
+    background: #0057ff;
     padding-left: 2.5vw;
     padding-right: 3vw;
     padding-top: 0.3vw;
@@ -266,7 +298,6 @@ a {
     display: flex;
     flex-wrap: nowrap;
     padding-left: 1vw;
-
 }
 
 .offer__icon {
@@ -319,7 +350,7 @@ a {
 .offer__rating::before {
     content: url(img/star.png) url(img/star.png) url(img/star.png) url(img/star.png) url(img/star.png);
     display: block;
-    transform: scale(1);
+    transform: scale(1.1);
     margin-right: 1vw;
 }
 
@@ -676,6 +707,11 @@ a {
     justify-content: space-between;
     margin-bottom: 3vw;
     row-gap: 3vw;
+    display: none;
+}
+
+.bonuses__flex.active {
+    display: flex;
 }
 
 .bonuses__bonus {
@@ -965,6 +1001,7 @@ a {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.18);
     padding-top: 0.7vw;
     padding-bottom: 0.7vw;
+    display: grid;
 }
 
 .main__anchor {
@@ -1268,6 +1305,9 @@ a {
 
 .page__image {
     max-width: 100%;
+    margin-left: auto;
+    display: block;
+    margin-right: auto;
 }
 
 .info-page {
@@ -1575,6 +1615,35 @@ textarea:focus {
     grid-row-start: 2;
 }
 
+.flex__nowrap-around {
+    justify-content: space-around;
+}
+
+.opportunity__image-padding {
+    padding: 0px;
+}
+
+.opportunities__tittle-padding {
+    padding: 0px;
+}
+
+.opportunity__more-center {
+    padding: 0px;
+    width: auto;
+    margin: 0px;
+}
+
+.element__text-active {
+    color: rgba(254, 171, 65, 1);
+}
+
+.banner__element :hover {
+    cursor: pointer;
+    color: rgba(254, 171, 65, 1);
+    transition: color 0.2s ease-in-out;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 1230px) {
     .offer {
         grid-template-columns: 0.9fr 1.2fr 0.1fr 1fr 0.1fr 1.3fr;
@@ -1616,7 +1685,7 @@ textarea:focus {
     }
 
     .page__header-way {
-    width: 31%;
+        width: 31%;
     }
 }
 
@@ -1628,6 +1697,18 @@ textarea:focus {
 
 @media only screen and (max-width: 768px) {
     .offers {
+        padding: 0px 3vw;
+        max-width: 100%;
+        justify-content: stretch;
+        row-gap: 3vw;
+    }
+    .offers-2 {
+        padding: 0px 3vw;
+        max-width: 100%;
+        justify-content: stretch;
+        row-gap: 3vw;
+    }
+    .offers-3 {
         padding: 0px 3vw;
         max-width: 100%;
         justify-content: stretch;
@@ -1675,7 +1756,7 @@ textarea:focus {
 
     .offer__benefits {
         grid-row-start: 2;
-        border-right: 0.4vw #C7C7C7 solid;
+        border-right: 0.4vw #c7c7c7 solid;
     }
 
     .button__none {
@@ -1787,7 +1868,6 @@ textarea:focus {
         width: 100%;
     }
 
-
     .offer__stars {
         width: 4vw;
     }
@@ -1812,7 +1892,6 @@ textarea:focus {
 
     .offer__payment {
         row-gap: 4vw;
-
     }
 
     .payment__qualiti {
@@ -2132,7 +2211,6 @@ textarea:focus {
 
     .lines__container {
         border-bottom: 0.5vw #f1f1f1 solid;
-        ;
     }
 
     .lines__tittle {
@@ -2309,7 +2387,7 @@ textarea:focus {
     }
 }
 
-@media only screen and (max-width:480px) {
+@media only screen and (max-width: 480px) {
     .footer__dots {
         top: 19%;
     }
@@ -2321,6 +2399,7 @@ textarea:focus {
 
     .offer__rating::before {
         transform: scale(0.8);
+        margin-right: 0.5vw;
     }
 
     .offer__rating {
@@ -2405,7 +2484,7 @@ textarea:focus {
 
     .lines__tittle {
         font-size: 4vw;
-        border-bottom: 0.5vw #0057FF solid;
+        border-bottom: 0.5vw #0057ff solid;
         padding-bottom: 0.5vw;
     }
 
